--- a/src/app/modules/layout/footer/footer.component.html
+++ b/src/app/modules/layout/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="bg-grey d-flex justify-content-center align-items-center">
+    <div class="text-white">
+        <b class="me-1">Ibisokozo</b>
+        <span class="me-1">@</span>
+        <b>2023</b>
+    </div>
+
+
+</div>
