--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<div class="bg-main w-100 d-flex justify-content-between align-items-center">
+    <div class="p-1">
+        <span class="lg-fs text-white">Ibisokozo</span>
+    </div>
+    <div class="pe-2">
+        <div class="text-white">
+            <span class="xl-fs">
+               <i class="fa fa-user-circle"></i>
+            </span>
+
+        </div>
+        <!-- <div class="text-white">
+            <span>
+               <i class="fa fa-user-plus"></i>
+            </span>
+            <span>
+                <i class="fa fa-sign-in-alt"></i>
+             </span>
+
+        </div> -->
+
+    </div>
+</div>
