add notification popup

--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -8,7 +8,9 @@
     </div><br><br><br><br><br>
     <div class="">
         <div class="w-100 h-100 align-items-center d-flex justify-content-center">
-            <button style="border: 10%; border:none" class="bg-main rounded text-white p-2">
+            <button
+            (click)="startGame()"
+             style="border: 10%; border:none" class="bg-main rounded text-white p-2">
                 <b>Tangura agakino</b>
             </button>
         </div>
