--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,8 +1,11 @@
-<div class="bg-main w-100 d-flex justify-content-between align-items-center">
+<div class="bg-main w-100 d-flex justify-content-between align-items-center" style="z-index:25">
     <div class="p-1">
         <span class="lg-fs text-white">Ibisokozo</span>
     </div>
-    <div class="pe-2">
+   
+
+    <div>
+        <div class="pe-2">
         <div class="text-white">
             <span class="xl-fs">
                <i class="fa fa-user-circle"></i>
@@ -20,4 +23,19 @@
         </div> -->
 
     </div>
+    <div class="bg-grey position-fixed mt-2 rounded" style="right: 1%; z-index:25">
+        <div class="mx-4">
+            <div>
+                <b>My profile</b>
+            </div>
+            <hr>
+            <div>
+                <b>Most scores</b>
+            </div>
+            <hr>
+        </div>
+
+    </div>
+    </div>
+    
 </div>
