add most-scores module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="position-fixed">
+<div class="position-fixed" style="height: 10px;">
     <app-notification></app-notification>
  </div>
 <router-outlet></router-outlet>
