--- a/src/app/shared/notification/notification.component.scss
+++ b/src/app/shared/notification/notification.component.scss
@@ -1,10 +1,10 @@
 
 .notification-success {
-    background: #F1FDF1; 
+    background: #5fec07; 
     border-radius: 5px;
 }
 
 .notification-failed {
-    background: #fdf1f1; 
-    border-radius: 5px
+    background: #ec0606;
+    border-radius: 5px;
 }
