--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,8 +31,8 @@ $font-weights: (
 
 
 $colors: (
-  'main': #359fe6,
-  'grey': #9a9494,
+  'main': #78B1E5,
+  'grey': #D9D9D9,
   'black': #000,
   'white': #fff,
   'success': rgb(132, 215, 50),
