--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -1,1 +1,41 @@
-<p>most-scores works!</p>
+
+             
+        
+          <div class="most-scores">
+            <h2>Most Scores</h2>
+            <ul class="list-unstyled user-list">
+                <li>
+                    <div class="user-card d-flex align-items-center p-2 border rounded">
+                        <div class="user-rank me-3">1</div>
+                        <img src="../../../assets/images/userprofile.png" alt="User Photo" class="user-photo rounded-circle">
+                        <div class="user-info">
+                            <div class="user-name fw-bold">dushime</div>
+                            <div class="user-points text-muted">342 points</div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user-card d-flex align-items-center p-2 border rounded">
+                        <div class="user-rank me-3">2</div>
+                        <img src="../../../assets/images/userprofile.png" alt="User Photo" class="user-photo rounded-circle">
+                        <div class="user-info">
+                            <div class="user-name fw-bold">yannick</div>
+                            <div class="user-points text-muted">321 points</div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user-card d-flex align-items-center p-2 border rounded">
+                        <div class="user-rank me-3">3</div>
+                        <img src="../../../assets/images/userprofile.png" alt="User Photo" class="user-photo rounded-circle">
+                        <div class="user-info">
+                            <div class="user-name fw-bold">john</div>
+                            <div class="user-points text-muted">123 points</div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        
+        
+    
