--- a/src/app/modules/profile/profile/profile.component.html
+++ b/src/app/modules/profile/profile/profile.component.html
@@ -1,1 +1,53 @@
-<p>profile works!</p>
+<div class="user-profile mt-2 xsm-fs">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="profile-info text-center">
+                <img src="../../../assets/images/userprofile.png" alt="User Photo" class="profile-photo img-fluid rounded-circle smaller-photo">
+                <h3 class="profile-name mt-3">dondelice</h3>
+                <p class="profile-points text-muted">342 points</p>
+            </div>
+            
+        </div>
+        <div class="w-100 d-flex justify-content-center">
+            <div class="d-flex justify-content-center" style="width:80%; justify-content:center">
+          
+                <div class="bg-grey rounded w-100 p-2 overflow-auto">
+                    <div class="float-end mb-2 text-primary">
+                        <i class="fa fa-pen"></i>
+                    </div>
+                    
+                    <div>
+                        <div class="my-2 d-flex">
+                            <b class="mx-2">Username</b>
+                            <b class="me-2">:</b>
+                            <span>dondelice</span>
+                        </div>
+                        <div class="my-2 d-flex">
+                            <b class="mx-2">Email</b>
+                            <b class="me-2">:</b>
+                            <span>dondelicedushime@gmail.com</span>
+                        </div>
+                        <div class="my-2 d-flex">
+                            <b class="mx-2">Score</b>
+                            <b class="me-2">:</b>
+                            <span>342</span>
+                        </div>
+                        <div class="my-2 d-flex">
+                            <b class="mx-2">wrong answers</b>
+                            <b class="me-2">:</b>
+                            <span>12</span>
+                        </div>
+                        <div class="my-2 d-flex">
+                            <b class="mx-2">correct answers</b>
+                            <b class="me-2">:</b>
+                            <span>56</span>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+
+        </div>
+       
+    </div>
+</div>
