--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="pt-5">
+    <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
+        <span class="lg-fs text-main">Login</span>
+    </div>
+
+    <div class="w-100 d-flex justify-content-center mt-5">
+        <div>
+            <div class="d-grid">
+                <label for="email" class="mb-1">Email Adress</label>
+                <input type="email" class="form-control border input rounded" id="email" placeholder="Email">
+            </div>
+            <div class="d-grid">
+                <label for="email" class="mb-1">Password</label>
+                <input type="email" class="form-control border input rounded" id="email" placeholder="Email">
+            </div>
+        </div>
+
+    </div>
+</div>
