--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -1,1 +1,62 @@
-<p>signup works!</p>
+<div class="pt-5">
+    <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
+        <span class="lg-fs text-main">Signup</span>
+    </div>
+
+    <div class="w-100 d-flex justify-content-center mt-5">
+        <div class="">
+            <div class="d-grid mb-2">
+                <label for="email" class="mb-1">Email Adress</label>
+                <input type="email" class="form-control border input rounded" id="email" placeholder="Email">
+            </div>
+            <div class="d-grid mb-2">
+                <label for="username" class="mb-1">Username</label>
+                <input type="text" class="form-control border input rounded" id="username" placeholder="Username">
+            </div>
+            <div class="d-grid mb-2">
+                <label for="password" class="mb-1">Password</label>
+                <div class="input-group">
+                    <input type="{{ passwordVisible ? 'text' : 'password' }}" class="form-control border input rounded" id="password" placeholder="Password">
+                    <span class="password-toggle" (click)="togglePasswordVisibility()">
+                        <i class="fa" [ngClass]="passwordVisible ? 'fa-eye' : 'fa-eye-slash'"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="d-grid ">
+                <label for="password2" class="mb-1">Confirm Password</label>
+                <div class="input-group">
+                    <input type="{{ passwordVisible ? 'text' : 'password' }}" class="form-control border input rounded" id="password2" placeholder="Reenter Password">
+                    <span class="password-toggle" (click)="togglePasswordVisibility()">
+                        <i class="fa" [ngClass]="passwordVisible ? 'fa-eye' : 'fa-eye-slash'"></i>
+                    </span>
+                </div>
+            </div>
+          <br><br><br>
+
+            <div class="w-100 d-flex justify-content-center mt-4">
+                <button class="btn bg-main text-white px-5 signup">
+                    <b>Signup</b>
+                </button>
+
+            </div>
+            <div class="mt-3">
+                <div>
+                    <span>Already have an account ? </span>
+                    <b
+                     class="text-main"
+                     role="button">Login</b>
+                </div>
+            </div>
+            
+            
+            
+        </div>
+
+    </div>
+</div>
+<div class="position-fixed w-100"
+style="bottom: 0;">
+<app-footer></app-footer>
+
+
+</div>
