--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -1,3 +1,7 @@
+<div class="ps-2 pt-1">
+    <app-go-back></app-go-back>
+   
+</div>
 <div class="pt-5">
     <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
         <span class="lg-fs text-main">Signup</span>
@@ -44,6 +48,7 @@
                     <span>Already have an account ? </span>
                     <b
                      class="text-main"
+                     routerLink="login"
                      role="button">Login</b>
                 </div>
             </div>
