--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -1,7 +1,11 @@
 
              
-        
+          <div class="ps-2 pt-1">
+            <app-go-back></app-go-back>
+           
+        </div>
           <div class="most-scores">
+          
             <h2>Most Scores</h2>
             <ul class="list-unstyled user-list">
                 <li>
