--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="ps-2 pt-1">
+    <app-go-back></app-go-back>
+   
+</div>
 <div class="pt-5">
     <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
         <span class="lg-fs text-main">Login</span>
@@ -36,6 +40,7 @@
                     <span>Don't have an account ? </span>
                     <b
                      class="text-main"
+                     routerLink="signup"
                      role="button">Signup</b>
                 </div>
             </div>
