--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -14,6 +14,14 @@
                 <b>Tangura agakino</b>
             </button>
         </div>
+        <br><br><br><br>
+        <div class="text-center">
+           <span>Woba uri mushasha murikano gakino ? </span><br>
+           <b class="text-main"
+           role="button"
+           routerLink="/instructions"
+           >Raba uko wobigenza</b>
+        </div>
 
     </div>
 </div>
