--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="bg-main w-100 d-flex justify-content-between align-items-center" style="z-index:25">
-    <div class="p-1">
+    <div class="p-1" routerLink="" role="button">
         <span class="lg-fs text-white">Ibisokozo</span>
     </div>
     
@@ -69,7 +69,7 @@
     
 </div>
 
-<dialog id="favDialog" class="rounded mx-2" style="border: none; max-width: 500px">
+<dialog id="favDialog" class="rounded mx-2 shadow" style="border: none; max-width: 500px">
     <div>
         <p class="text-center" style="color: #f27474; font-size: 60px">
             <i class="fa-regular fa-circle-question"></i>
