--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -2,3 +2,51 @@
     <app-go-back></app-go-back>
    
 </div>
+
+<div 
+class="mt-5 ms-4 pt-5" 
+*ngIf="!niruze"
+>
+    <div>
+        <div class="w-100 h-100 align-items-center d-flex justify-content-center mb-4">
+            <b class="lg-fs">Sokwe !</b>
+        </div><br><br>
+        <div>
+            <div class="w-100 h-100 align-items-center d-flex justify-content-center">
+                <button
+                 style="border: 10%; border:none" 
+                 class="bg-main rounded text-white p-2"
+                 (click)="niruze=true">
+                    <b class="me-1">Niruze</b>
+                    <i class="fa fa-arrow-right"></i>
+                </button>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div 
+*ngIf="niruze"
+>
+<div>
+    <div class="d-flex w-100 justify-content-center fs-2 mt-5">
+        <span>So na nyoko bapfuye iki ?</span>
+    </div>
+    <div class="ms-5 mt-5">
+        <div class="form-check fs-5"
+        role="button">
+            <input type="checkbox" id="choice" class="form-check-input">
+            <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
+        </div>
+        <div class="form-check fs-5">
+            <input type="checkbox" id="choice" class="form-check-input">
+            <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
+        </div>
+        <div class="form-check fs-5">
+            <input type="checkbox" id="choice" class="form-check-input">
+            <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
+        </div>
+    </div>
+</div>
+
+</div>
