--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -27,7 +27,7 @@
 
     </div>
     <div
-     class="bg-grey position-fixed mt-2 rounded" 
+     class="bg-grey position-fixed mt-2 rounded menu" 
      style="right: 1%; z-index:25"
      *ngIf="isMenuShown">
      <div class="float-end text-grey" style="margin-top: -8.5%; margin-left:100px">
