--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,8 @@ $font-weights: (
 }
 
 
+
+
 $colors: (
   'main': #78B1E5,
   'grey': #D9D9D9,
@@ -47,6 +49,10 @@ $colors: (
   .text-#{$color-name} {
     color: $color-value;
   }
+}
+
+button:hover{
+  background-color: #2885dc;  
 }
 
 
