--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -32,21 +32,115 @@ class="mt-5 ms-4 pt-5"
     <div class="d-flex w-100 justify-content-center fs-2 mt-5">
         <span>So na nyoko bapfuye iki ?</span>
     </div>
-    <div class="ms-5 mt-5">
+    <div class="mx-5 mt-5 py-2 border border-dark rounded p-2">
         <div class="form-check fs-5"
+        (click)="openModal()"
         role="button">
-            <input type="checkbox" id="choice" class="form-check-input">
+            <input type="radio" id="choice" name="choice" class="form-check-input">
             <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
         </div>
         <div class="form-check fs-5">
-            <input type="checkbox" id="choice" class="form-check-input">
+            <input type="radio" id="choice" name="choice" class="form-check-input">
             <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
         </div>
         <div class="form-check fs-5">
-            <input type="checkbox" id="choice" class="form-check-input">
+            <input type="radio" id="choice" name="choice" class="form-check-input">
             <label for="choice" class="form-check-label">Agahanga k'imbwa</label>
         </div>
     </div>
 </div>
 
+</div>
+<div class="w-100 d-flex justify-content-center">
+
+<dialog id="myDialog" class="rounded mx-2 shadow" style="border: none; width: 100%">
+    <div class="float-end">
+        <div>
+            <b>score :</b>
+            <span>123</span>
+        </div>
+
+    </div><br>
+    <div *ngIf="!isCorrect">
+        <p class="text-center ">
+            <i class="fa fa-times-circle fs-1 text-danger"></i>
+        </p>
+
+        <p
+            style="font-weight: 900; font-size: 20px"
+            class="text-center"
+        >
+            Ryooo Kirakunaniye
+            <i class="fa fa-sad-tear" ></i>
+        </p>
+        <div class="text-center mt-3 w-100 d-flex justify-content-around">
+            <b
+            (click)="closeModal()"
+            type="button"
+            class="btn btn-sm me-3 border border-dark"
+        >
+        <b>Subiramwo</b>
+        </b>
+            <b
+                type="button"
+                class="btn  btn-sm me-3 border border-dark"
+            >
+            <b>Impa</b>
+            </b>
+
+            <button
+                type="button"
+                class="btn bg-primary text-white"
+            >
+                <b>
+                Igikurikira
+
+                </b>
+                <i class="fa fa-arrow-right"></i>
+                
+            </button>
+        </div>
+    </div>
+    <div *ngIf="isCorrect">
+        <p class="text-center ">
+            <i class="fa fa-check-circle fs-1 text-success"></i>
+        </p>
+
+        <p
+            style="font-weight: 900; font-size: 20px"
+            class="text-center"
+        >
+            Uragitoye 
+            <i class="fa fa-smile" style="color: rgb(255, 239, 65);"></i>
+        </p>
+       
+      
+        <div class="text-center mt-3 w-100 d-flex justify-content-around">
+            <b
+            (click)="closeModal()"
+            type="button"
+            class="btn btn-sm me-3 border border-dark"
+        >
+        <b>Subira inyuma</b>
+        </b>
+         
+
+            <button
+                type="button"
+                class="btn bg-primary text-white"
+            >
+                <b>
+                Igikurikira
+
+                </b>
+                <i class="fa fa-arrow-right"></i>
+                
+            </button>
+        </div>
+    </div>
+
+
+
+
+</dialog>
 </div>
