update choosing answers feature

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -40,7 +40,7 @@
                     <span>Don't have an account ? </span>
                     <b
                      class="text-main"
-                     routerLink="signup"
+                     routerLink="/signup"
                      role="button">Signup</b>
                 </div>
             </div>
