--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -48,7 +48,7 @@
                     <span>Already have an account ? </span>
                     <b
                      class="text-main"
-                     routerLink="login"
+                     routerLink="/login"
                      role="button">Login</b>
                 </div>
             </div>
