--- a/src/app/modules/layout/footer/footer.component.html
+++ b/src/app/modules/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="bg-grey d-flex justify-content-center align-items-center">
     <div class="text-white">
         <b class="me-1">Ibisokozo</b>
-        <span class="me-1">@</span>
+        <span class="me-1">©</span>
         <b>2023</b>
     </div>
 
