--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,8 @@ $font-weights: (
 
 
 $colors: (
-  'main': #78B1E5,
-  'grey': #D9D9D9,
+  'main': #4d99e0,
+  'grey': #b7b2b2,
   'black': #000,
   'white': #fff,
   'success': rgb(132, 215, 50),
