fix a bug on igisokozo to remain disabled when the user provided a wrong answer

--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,16 +1,13 @@
-<div class="mt-4 p-1">
-    <div>
-        <span class="lg-fs" >Kaze dondelice !</span>
-        <p>
-            <b class="text-main md-fs pe-1">Ibisokozo</b>
-            <span class="md-fs">ni urubuga rugufasha gukina agakino k'ibisokozo</span>
-        </p>
-    </div><br><br><br><br><br>
+<div class="mt-4 p-1" >
+<canvas id="canvas"></canvas>
+
+   <br><br><br><br><br>
     <div class="">
         <div class="w-100 h-100 align-items-center d-flex justify-content-center">
             <button
             (click)="startGame()"
-             style="border: 10%; border:none" class="bg-main rounded text-white p-2">
+             style="border: 10%; border:none"
+              class="bg-main rounded text-white p-2 shadow start-btn">
                 <b>Tangura agakino</b>
             </button>
         </div>
