change primary color

--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,13 +1,23 @@
-<div class="mt-4 p-1" >
-<canvas id="canvas"></canvas>
+<div class="mt-4 p-1" class="">
+<!-- <canvas id="canvas"></canvas> -->
 
    <br><br><br><br><br>
+   <div class="w-100 d-flex justify-content-center">
+    <img 
+    class="bg-main"
+    style="width: 30%;"
+    src="../../../assets/images/wave.gif"
+    alt="">
+
+   </div>
+   <br><br><br>
+  
     <div class="">
         <div class="w-100 h-100 align-items-center d-flex justify-content-center">
             <button
             (click)="startGame()"
              style="border: 10%; border:none"
-              class="bg-main rounded text-white p-2 shadow start-btn">
+              class="bg-main rounded text-white p-2 shadow">
                 <b>Tangura agakino</b>
             </button>
         </div>
