--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,11 +33,11 @@ $font-weights: (
 
 
 $colors: (
-  'main': #6fa55f,
+  'main': #57bea8,
   'grey': #b7b2b2,
   'black': #000,
   'white': #fff,
-  'success': rgb(132, 215, 50),
+  'success': rgb(144, 175, 114),
   'danger': rgb(200, 52, 52),
 );
 
@@ -52,7 +52,7 @@ $colors: (
 }
 
 button:hover{
-  background-color: #2885dc;  
+  background-color: #286155;  
 }
 
 
