--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="bg-main w-100 d-flex justify-content-between align-items-center" style="z-index:25">
-    <div class="p-1" routerLink="" role="button">
+    <div class="p-1 d-flex align-items-center" routerLink="" role="button">
+
         <span class="lg-fs text-white">Ibisokozo</span>
     </div>
     
