--- a/src/app/modules/profile/profile/profile.component.html
+++ b/src/app/modules/profile/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="user-profile mt-2">
-    <div class="ps-2 pt-1">
+    <!-- <div class="ps-2 pt-1">
         <app-go-back></app-go-back>
        
-    </div>
+    </div> -->
     <div class="row">
         <div class="col-md-4">
             <div class="profile-info text-center">
