--- a/src/app/shared/go-back/go-back.component.html
+++ b/src/app/shared/go-back/go-back.component.html
@@ -1,6 +1,6 @@
 <div
 (click)="back()"
- class="bg-grey d-flex justify-content-center align-items-center"
+ class="bg-white text-main d-flex justify-content-center align-items-center"
   style="border-radius: 50%; width:25px; height:25px"
   role="button">
     <i class="fa fa-arrow-left"></i>
