--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -1,8 +1,9 @@
-<div
-style="transition: all 2s;" class="ps-2 pt-1">
+<!-- <div
+style="" class="ps-2 pt-1">
     <app-go-back></app-go-back>
    
-</div>
+</div> -->
+
 
 <div 
 class="mt-5 ms-4 pt-5" 
@@ -20,6 +21,8 @@ class="mt-5 ms-4 pt-5"
                  (click)="niruze=true">
 
                     <b class="me-1">Niruze</b>
+                <i class="fa fa-arrow-right"></i>
+
 
                 </button>
             </div>
@@ -35,24 +38,24 @@ class="mt-5 ms-4 pt-5"
     </div>
 </div>
 <div 
-class="igisokozo"
+class="igisokozo slide-in"
 *ngIf="niruze"
 >
 <div>
-    <div class="d-flex w-100 justify-content-center fs-2 mt-5">
+    <div class="d-flex w-100 justify-content-center fs-2 mt-5 slide-in">
         <span>{{igisokozo.igisokozo}}</span>
     </div>
-    <div class="mx-5 mt-5 py-2 border border-dark rounded p-2">
-        <div class="form-check fs-5"
+    <div class="mx-5 mt-5 py-2 border border-dark overflow-x-auto rounded p-2 slide-in">
+        <div class="form-check fs-5 slide-in d-flex align-items-start"
         *ngFor="let item of igisokozo.answers"
         role="button">
             <input 
-            type="radio"
+             type="radio"
              id="choice"
              name="choice" 
-             class="form-check-inputborder border-dark p-2 me-2 "
-        (click)="checkAnswer(item)"
-        [disabled]="answerDisabled"
+             class="form-check-inputborder border-dark p-2 me-2 custom-radio"
+             (click)="checkAnswer(item)"
+             [disabled]="answerDisabled"
             >
             <label for="choice" class="form-check-label">{{item.answer}}</label>
         </div>
@@ -84,7 +87,7 @@ class="igisokozo"
 </div>
 <div class="w-100 d-flex justify-content-center">
 
-<dialog id="myDialog" class="rounded mx-2 shadow" style="border: none; width: 100%">
+<dialog id="myDialog" class="rounded shadow" style="border: none; width: 100%">
     <div class="float-end">
         <div>
             <b>score :</b>
@@ -152,10 +155,14 @@ class="igisokozo"
             Uragitoye 
             <i class="fa fa-smile"></i>
         </p>
-        <img 
+        <div class="w-100 d-flex justify-content-center">
+            <img 
         style="width: 100px;"
         src="../../../assets/images/wired-outline-1103-confetti.gif" 
         alt="">
+
+        </div>
+        
        
       
         <div class="text-center mt-3 w-100 d-flex justify-content-around">
@@ -171,7 +178,7 @@ class="igisokozo"
             <button
             (click)="getIgisokozo()"
                 type="button"
-                class="bg-main text-white"
+                class="btn bg-main text-white"
             >
                 <b>
                 Igikurikira
