fix the alignement issue on the header

--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mt-4 p-1" class="">
-<!-- <canvas id="canvas"></canvas> -->
+<canvas id="canvas" #canvas></canvas>
 
    <br><br><br><br><br>
    <div class="w-100 d-flex justify-content-center">
