--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -2,7 +2,7 @@
  
     <div class="p-1 d-flex align-items-center" routerLink="" role="button">
         <div
-        class="pe-2 pt-1">
+        class="pe-2">
             <app-go-back></app-go-back>
            
         </div>
