--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.scss
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.scss
@@ -18,11 +18,11 @@ button:hover{
   background-color: #18b86b;  
 }
 .custom-radio {
-  background-color: #007BFF; /* Customize with your desired background color */
-  width: 20px; /* Adjust the width to your desired size */
-  height: 20px; /* Adjust the height to your desired size */
-  border-radius: 50%; /* Make it round */
-  margin-right: 10px; /* Add spacing between the radio button and label */
+  background-color: #007BFF; 
+  width: 20px; 
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px; 
 }
 
 
