fix the alignement issue if the congrulation image

--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -156,11 +156,12 @@ class="igisokozo slide-in"
             <i class="fa fa-smile"></i>
         </p>
         <div class="w-100 d-flex justify-content-center">
-            <img 
-        style="width: 100px;"
-        src="../../../assets/images/wired-outline-1103-confetti.gif" 
-        alt="">
-
+            <span>
+                <img 
+                style="width: 100px;"
+                src="../../../assets/images/wired-outline-1103-confetti.gif" 
+                alt="">
+            </span>           
         </div>
         
        
