remove btn bootstrap class and replace it with custom css styles

--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -73,7 +73,8 @@ class="igisokozo slide-in"
     <button
     (click)="getIgisokozo()"
         type="button"
-        class="btn bg-main text-white"
+        class="rounded p-2 bg-main text-white"
+        style="border: none; "
     >
         <b>
         Igikurikira
@@ -126,7 +127,8 @@ class="igisokozo slide-in"
             <button
             (click)="getIgisokozo()"
                 type="button"
-                class="btn bg-main text-white"
+                class="rounded p-2 bg-main text-white"
+                style="border:none"
             >
                 <b>
                 Igikurikira
@@ -179,7 +181,8 @@ class="igisokozo slide-in"
             <button
             (click)="getIgisokozo()"
                 type="button"
-                class="btn bg-main text-white"
+                class="rounded p-2 bg-main text-white"
+                style="border:none"
             >
                 <b>
                 Igikurikira
