--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -157,7 +157,8 @@ class="igisokozo slide-in"
             Uragitoye 
             <i class="fa fa-smile"></i>
         </p>
-        <div class="w-100 d-flex justify-content-center">
+        <div class=""
+        style="width: 100%; display:flex; justify-content:center">
             <span>
                 <img 
                 style="width: 100px;"
