--- a/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
+++ b/src/app/modules/igisokozo/igisokozo/igisokozo.component.html
@@ -1,8 +1,22 @@
-<!-- <div
-style="" class="ps-2 pt-1">
-    <app-go-back></app-go-back>
-   
-</div> -->
+
+
+<audio #correctAudioElement src="../../../assets/audios/claps-44774.mp3" controls hidden></audio>
+<audio #incorrectAudioElement src="../../../assets/audios/negative_beeps-6008.mp3" controls hidden></audio>
+
+     <div class="d-flex justify-content-center">
+        <img
+        [ngClass]="{'position-absolute': true, 'animate-slide': animateImage}"
+          *ngIf="correctAnswerImageVisible"
+          class="position-absolute"
+          style="filter: invert(50%); width: 70px"
+          src="../../../assets/images/one.png"
+          alt=""
+        >
+      </div>
+      
+     
+
+
 
 
 <div 
@@ -32,6 +46,8 @@ class="mt-5 ms-4 pt-5"
                 class="bg-main"
                 src="../../../assets/images/rocket.gif" 
                 alt="">
+                 
+
             </div>
 
         </div>
@@ -88,17 +104,17 @@ class="igisokozo slide-in"
 </div>
 <div class="w-100 d-flex justify-content-center">
 
-<dialog id="myDialog" class="rounded shadow" style="border: none; width: 100%">
+<dialog id="myDialog" class="rounded shadow animate-slide" style="border: none; width: 100%">
     <div class="float-end">
         <div>
             <b>score :</b>
-            <span>123</span>
+            <span>{{score}}</span>
         </div>
 
     </div><br>
     <div *ngIf="!isCorrect">
         <p class="text-center ">
-            <i class="fa fa-times-circle fs-1 text-danger"></i>
+            <i class="fa fa-times-circle fs-x text-danger"></i>
         </p>
 
         <p
@@ -106,7 +122,11 @@ class="igisokozo slide-in"
             class="text-center"
         >
             Ryooo Kirakunaniye
-            <i class="fa fa-sad-tear" ></i>
+            <img 
+            style="width: 40px;"
+            class="bg-main"
+            src="../../../assets/images/sad(1).gif" 
+            alt="">
         </p>
         <div class="text-center mt-3 w-100 d-flex justify-content-around">
             <b
@@ -125,7 +145,7 @@ class="igisokozo slide-in"
             </b>
 
             <button
-            (click)="getIgisokozo()"
+            (click)="getIgisokozo2()"
                 type="button"
                 class="rounded p-2 bg-main text-white"
                 style="border:none"
@@ -138,7 +158,7 @@ class="igisokozo slide-in"
                 
             </button>
         </div>
-        <div>
+        <div class="mt-2">
             <div>
                 <b>Inyishu watanze :</b>
                 <span>{{providedAnswer}}</span>
@@ -147,7 +167,7 @@ class="igisokozo slide-in"
     </div>
     <div *ngIf="isCorrect">
         <p class="text-center ">
-            <i class="fa fa-check-circle fs-1 text-success"></i>
+            <i class="fa fa-check-circle fs-x text-success"></i>
         </p>
 
         <p
@@ -180,7 +200,7 @@ class="igisokozo slide-in"
          
 
             <button
-            (click)="getIgisokozo()"
+            (click)="getIgisokozo2()"
                 type="button"
                 class="rounded p-2 bg-main text-white"
                 style="border:none"
